--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello world!
+# Paradox Interactive
+## Компания выспускающай игры по частям
+*Это просто кошмар* - **цитата одного из пользователей rusub**
+~~На самом деле это не так~~
+### Франжизы компании
+1. + Europe Univer
+2. + Hearts of iron
+3. - Crusader kings
+[Ссылка на сайт с информацие по компании](https://ru.wikipedia.org/wiki/Paradox_Interactive)
+![https://upload.wikimedia.org/wikipedia/ru/a/a8/Paradox_Interactive_logo.png]
+Crusader kings|Hearts of iron|Europe Univer
+---|:---:|---:
+2004 – Crusader Kings|2002 – Hearts of Iron|2000 – Europa Universalis
+2012 – Crusader Kings II|2005 – Hearts of Iron II|2001 – Europa Universalis II
+-|2009 – Hearts of Iron III|2007 – Europa Universalis III
+-|2005 – Hearts of Iron II|Europa Universalis: Rome
+-|2011 – Darkest Hour: A Hearts of Iron Game|2009 – For the Glory
+-|2016 – Hearts of Iron IV|2013 – Europa Universalis IV
